[gd_scene load_steps=8 format=3 uid="uid://d18yvqvuewmij"]

[ext_resource type="Script" path="res://scripts/character_select_gui.gd" id="1_e13bu"]
[ext_resource type="FontFile" uid="uid://compj47jyyuo6" path="res://Kanit/Kanit-ExtraBoldItalic.ttf" id="6_1tuqf"]
[ext_resource type="Script" path="res://scenes/upgrade_item_button.gd" id="7_enbxg"]
[ext_resource type="FontFile" uid="uid://vq8uf036llj8" path="res://Kanit/Kanit-Medium.ttf" id="8_37c1k"]
[ext_resource type="Texture2D" uid="uid://trnlexovobsp" path="res://assets/kenney_pixel-shmup/Ships/ship_0002.png" id="9_b7460"]
[ext_resource type="Texture2D" uid="uid://be3tmckjlq86k" path="res://assets/kenney_pixel-shmup/Ships/ship_0000.png" id="10_88rgf"]
[ext_resource type="Texture2D" uid="uid://c58ygujb3tv2y" path="res://assets/kenney_pixel-shmup/Ships/ship_0001.png" id="11_tfxhq"]

[node name="CharacterSelect" type="Panel"]
process_mode = 2
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_e13bu")

[node name="Header" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -507.0
offset_top = -1882.0
offset_right = 507.0
offset_bottom = -1757.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("6_1tuqf")
theme_override_font_sizes/font_size = 65
text = "Sveikiname pasiekus naują lygį!"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -542.0
offset_top = -1780.0
offset_right = 543.0
offset_bottom = -1655.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_1tuqf")
theme_override_font_sizes/font_size = 65
text = "Pasirinkite charakterį"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -500.0
offset_top = -1687.0
offset_right = 500.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
alignment = 1

[node name="CharItemButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2
script = ExtResource("7_enbxg")

[node name="Name" type="Label" parent="VBoxContainer/CharItemButton"]
layout_mode = 0
offset_left = 205.0
offset_top = 1.0
offset_right = 458.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("8_37c1k")
theme_override_font_sizes/font_size = 80
text = "Tankas"

[node name="Descryption" type="Label" parent="VBoxContainer/CharItemButton"]
layout_mode = 0
offset_left = 73.0
offset_top = 144.0
offset_right = 615.0
offset_bottom = 477.0
theme_override_fonts/font = ExtResource("8_37c1k")
theme_override_font_sizes/font_size = 30
text = "Lėtas, bet itin atsparus kovotojas. 
Ginklas: Šaudo į visas puses vienu metu.
Statistikos:
    Greitis: Žemas
    Atsparumas: Labai aukštas
    Šaudymo sparta: Vidutinė
    Žala: Vidutinė"

[node name="Icon" type="TextureRect" parent="VBoxContainer/CharItemButton"]
layout_mode = 0
offset_left = 36.0
offset_top = 15.0
offset_right = 157.0
offset_bottom = 136.0
texture = ExtResource("9_b7460")

[node name="CharItemButton2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2
script = ExtResource("7_enbxg")

[node name="Name" type="Label" parent="VBoxContainer/CharItemButton2"]
layout_mode = 0
offset_left = 205.0
offset_top = 1.0
offset_right = 492.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("8_37c1k")
theme_override_font_sizes/font_size = 80
text = "Skautas"

[node name="Descryption" type="Label" parent="VBoxContainer/CharItemButton2"]
layout_mode = 0
offset_left = 73.0
offset_top = 144.0
offset_right = 877.0
offset_bottom = 477.0
theme_override_fonts/font = ExtResource("8_37c1k")
theme_override_font_sizes/font_size = 30
text = "Aprašymas: Greitas, bet pažeidžiamas kovotojas.
Ginklas: Automatinis ginklas, šaudantis greitomis kulkomis.
Statistikos:
    Greitis: Labai aukštas
    Atsparumas: Žemas
    Šaudymo sparta: Labai aukšta
    Žala: Žema"

[node name="Icon" type="TextureRect" parent="VBoxContainer/CharItemButton2"]
layout_mode = 0
offset_left = 36.0
offset_top = 15.0
offset_right = 157.0
offset_bottom = 136.0
texture = ExtResource("10_88rgf")

[node name="CharItemButton3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(1000, 500)
layout_mode = 2
script = ExtResource("7_enbxg")

[node name="Name" type="Label" parent="VBoxContainer/CharItemButton3"]
layout_mode = 0
offset_left = 205.0
offset_top = 1.0
offset_right = 425.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("8_37c1k")
theme_override_font_sizes/font_size = 80
text = "Eilinis"

[node name="Descryption" type="Label" parent="VBoxContainer/CharItemButton3"]
layout_mode = 0
offset_left = 73.0
offset_top = 144.0
offset_right = 977.0
offset_bottom = 477.0
theme_override_fonts/font = ExtResource("8_37c1k")
theme_override_font_sizes/font_size = 30
text = "Aprašymas: Universalus kovotojas su subalansuotomis savybėmis.
Ginklas: Šaudo kūgiu formos spinduliu priešais save.
Statistikos:
    Greitis: Vidutinis
    Atsparumas: Vidutinis
    Šaudymo sparta: Vidutinė
    Žala: Aukšta"

[node name="Icon" type="TextureRect" parent="VBoxContainer/CharItemButton3"]
layout_mode = 0
offset_left = 36.0
offset_top = 15.0
offset_right = 157.0
offset_bottom = 136.0
texture = ExtResource("11_tfxhq")

[connection signal="pressed" from="VBoxContainer/CharItemButton" to="." method="_on_char_item_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CharItemButton2" to="." method="_on_char_item_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/CharItemButton3" to="." method="_on_char_item_button_3_pressed"]
